--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -18,27 +18,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.30"
+        app:layout_constraintVertical_bias="0.40"
         tools:text="Nama : Mohammad Fahmi" />
 
     <Button
         android:id="@+id/btn_choose_event"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:text="@string/pilih_event"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintEnd_toEndOf="@+id/tv_name_choose"
         app:layout_constraintStart_toStartOf="@+id/tv_name_choose"
         app:layout_constraintTop_toBottomOf="@+id/tv_name_choose" />
 
-
     <Button
         android:id="@+id/btn_choose_guest"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:text="@string/pilih_guest"
+        android:layout_marginBottom="16dp"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_choose_event"
         app:layout_constraintStart_toStartOf="@+id/btn_choose_event"
-        app:layout_constraintTop_toBottomOf="@+id/btn_choose_event" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_choose_event"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
