--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,8 +41,10 @@
         android:id="@+id/edt_add_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/input_name"
+        android:background="@drawable/edt_background"
         android:backgroundTint="@color/white"
+        android:hint="@string/input_name"
+        android:padding="6dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         tools:ignore="Autofill,TextFields" />
@@ -50,9 +52,9 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add_name"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="32dp"
+        android:layout_height="55dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/btn_outlined_color"
         android:text="@string/next"
         android:textColor="@color/white"
