--- a/app/src/main/res/layout/items_event.xml
+++ b/app/src/main/res/layout/items_event.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:contentPadding="8dp"
-    app:cardCornerRadius="16dp"
+    app:cardCornerRadius="4dp"
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,15 +27,14 @@
             android:id="@+id/tv_name_event"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/img_event"
             app:layout_constraintEnd_toStartOf="@+id/img_event"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/img_event"
-            app:layout_constraintVertical_bias="0.19999999"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="VENT NAME" />
 
         <TextView
@@ -44,13 +42,30 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:textColor="#c4b454"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/tv_name_event"
             app:layout_constraintStart_toStartOf="@+id/tv_name_event"
             app:layout_constraintTop_toBottomOf="@+id/tv_name_event"
-            app:layout_constraintVertical_bias="0.0"
             tools:text="20-12-2021" />
+
+        <TextView
+            android:id="@+id/tv_event_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/event_description_dummy"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/img_event"
+            app:layout_constraintStart_toStartOf="@+id/tv_event_date"
+            app:layout_constraintTop_toBottomOf="@id/tv_event_date"
+            app:layout_constraintVertical_bias="0.0" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
