--- a/app/src/main/res/layout/items_guest.xml
+++ b/app/src/main/res/layout/items_guest.xml
@@ -34,6 +34,16 @@
             android:textSize="16sp"
             tools:text="20-03-2021" />
 
+        <TextView
+            android:id="@+id/tv_is_prime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="8dp"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            tools:text="isPrime: true" />
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
