UPDATE: add toolbar to MapFragment.kt and refactor menu_event.xml name

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -6,6 +6,31 @@
     android:orientation="vertical"
     tools:context=".fragment.MapFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_map"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@drawable/tool_line_background">
+
+        <ImageButton
+            android:id="@+id/btn_back_map"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/back_button"
+            android:src="@drawable/btn_back_icon" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:text="@string/message_from_codi"
+            android:textAllCaps="true"
+            android:textColor="#c4b454"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_event_map"
         android:layout_width="match_parent"
